--- a/css/screen.css
+++ b/css/screen.css
@@ -277,27 +277,13 @@ nav[role="navigation"] ul li a:hover {
 	clear: both;
 }
 
-.illustration {
+.basicheader {
 	margin: 0 auto;
 	max-width: 100%;
 	height: 5.4em;
 	overflow: auto;
 	padding: 0;
 	background-image: url(../img/illustration-header.jpg);
-	background-repeat: no-repeat;
-	background-position: top;
-	color: rgb(255,255,255);
-	text-align: center;
-	clear: both;
-}
-
-.photo {
-	margin: 0 auto;
-	max-width: 100%;
-	height: 5.4em;
-	overflow: auto;
-	padding: 0;
-	background-image: url(../img/photo-header.jpg);
 	background-repeat: no-repeat;
 	background-position: top;
 	color: rgb(255,255,255);
@@ -546,7 +532,7 @@ article footer ul li:last-of-type a {
 
 
 .comment_box, .contact_box {
-	width: 100%;
+	width: 98%;
 	float: left;
 	position: relative;
 	padding: 1em 0;
@@ -578,7 +564,7 @@ form fieldset label {
 
 form input, #captcha {
 	font-size: .85em;
-	width: 100%;
+	width: 98%;
 	border: 1px solid rgb(227,227,208);
 	-moz-border-radius: 2px;
 	-webkit-border-radius: 2px;
@@ -592,7 +578,7 @@ form input, #captcha {
 form textarea {
 	font-size: .85em;
 	padding: 5px;
-	width: 100%;
+	width: 98%;
 	-moz-border-radius: 2px;
 	-webkit-border-radius: 2px;
 	border-radius: 2px;
