--- a/css/screen.css
+++ b/css/screen.css
@@ -538,13 +538,39 @@ article footer ul li:last-of-type a {
 
 /*---- Archive ----*/
 
-.archive section[role="main"] ul{
+.archive main[role="main"] ul {
 	list-style-type: none;
+	margin: 0;
+	padding: 0;
 }
 
-.archive section[role="main"] ul li {
-	border-bottom: 1px dotted rgb(227,227,208);
+.archive main[role="main"] ul li {
+	border-bottom: 1px dotted rgb(222,218,201);
 }
+
+.archive main[role="main"] ul li:last-of-type {
+	border-bottom: 0;
+	margin: 0 0 3em 0;
+}
+
+.archive main[role="main"] ul h2 {
+	font-size: 1.25em;
+	margin-top: 1em;
+}
+
+.archive main[role="main"] ul li a {
+	text-decoration: none;
+}
+
+.archive main[role="main"] ul li p {
+	margin-top: 0;
+	margin-bottom: 1.5em;
+}
+
+.archive main[role="main"] ul li p a {
+	text-decoration: underline;
+}
+
 
 
 /*---- Forms ----*/
